@@ -4,6 +4,7 @@
 <script type="text/javascript" src="bind.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <script type="text/javascript" src="background.js"></script>
+<script type="text/javascript" src="context_menu.js"></script>
 </head>
 <body></body>
 </html>
