@@ -1,1 +1,1 @@
-<Project name="sabconnect++"><MagicFolder excludeFiles="*.pnproj;*.pnps;*.bak;*.tmp" excludeFolders="CVS;.svn;.hg;.git;project;images" filter="*.js;*.html;*.css;*.json" name="sabconnect" path="E:\IT\sabconnect\"><MagicFolder excludeFiles="*.pnproj;*.pnps;*.bak;*.tmp" excludeFolders="CVS;.svn;.hg;.git;project;images" filter="*.js;*.html;*.css;*.json" name="content_scripts" path="content_scripts\"><File path="binsearch.js"></File><File path="bintube.js"></File><File path="fanzub.js"></File><File path="newzbin.js"></File><File path="newzleech.js"></File><File path="nzb.su.js"></File><File path="nzbclub.js"></File><File path="nzbindex.js"></File><File path="nzbmatrix.js"></File><File path="nzbsorg.js"></File><File path="nzbsrus.js"></File></MagicFolder><MagicFolder excludeFiles="*.pnproj;*.pnps;*.bak;*.tmp" excludeFolders="CVS;.svn;.hg;.git;project;images" filter="*.js;*.html;*.css;*.json" name="css" path="css\"><File path="common.css"></File><File path="nzbmatrix.css"></File><File path="popup.css"></File><File path="settings.css"></File></MagicFolder><File path="background.html"></File><File path="background.js"></File><File path="bind.js"></File><File path="common.js"></File><File path="content_common.js"></File><File path="jgcharts.pack.js"></File><File path="jquery-1.4.2.min.js"></File><File path="jquery-ui-1.7.2.sortable.min.js"></File><File path="jquery.jqote.min.js"></File><File path="manifest.json"></File><File path="popup.html"></File><File path="popup.js"></File><File path="settings.html"></File><File path="webtoolkit.base64.js"></File></MagicFolder></Project>
+<Project name="sabconnect++"><MagicFolder excludeFiles="*.pnproj;*.pnps;*.bak;*.tmp" excludeFolders="CVS;.svn;.hg;.git;project;images" filter="*.js;*.html;*.css;*.json;*.txt" name="sabconnect" path="E:\IT\sabconnect\"><MagicFolder excludeFiles="*.pnproj;*.pnps;*.bak;*.tmp" excludeFolders="CVS;.svn;.hg;.git;project;images" filter="*.js;*.html;*.css;*.json;*.txt" name="content_scripts" path="content_scripts\"><File path="binsearch.js"></File><File path="bintube.js"></File><File path="fanzub.js"></File><File path="newzbin.js"></File><File path="newzleech.js"></File><File path="nzb.su.js"></File><File path="nzbclub.js"></File><File path="nzbindex.js"></File><File path="nzbmatrix.js"></File><File path="nzbsorg.js"></File><File path="nzbsrus.js"></File></MagicFolder><MagicFolder excludeFiles="*.pnproj;*.pnps;*.bak;*.tmp" excludeFolders="CVS;.svn;.hg;.git;project;images" filter="*.js;*.html;*.css;*.json;*.txt" name="css" path="css\"><File path="common.css"></File><File path="nzbmatrix.css"></File><File path="popup.css"></File><File path="settings.css"></File></MagicFolder><File path="background.html"></File><File path="background.js"></File><File path="bind.js"></File><File path="changelog.txt"></File><File path="common.js"></File><File path="content_common.js"></File><File path="context_menu.js"></File><File path="jgcharts.pack.js"></File><File path="jquery-1.4.2.min.js"></File><File path="jquery-ui-1.7.2.sortable.min.js"></File><File path="jquery.jqote.min.js"></File><File path="manifest.json"></File><File path="popup.html"></File><File path="popup.js"></File><File path="settings.html"></File><File path="webtoolkit.base64.js"></File></MagicFolder></Project>
